Making progress on tests